<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetAttendance"
    android:background="@color/colorPrimaryDark"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="28dp"
    app:behavior_peekHeight="44dp"
    app:behavior_hideable="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/bottom_handler"
        android:layout_width="54dp"
        android:layout_height="4dp"
        android:background="@drawable/bg_handler_bottom_sheet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_view_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_handler"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/image_view_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_current_location"/>

    <TextView
        android:id="@+id/tv_current_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="24dp"
        android:text="@string/default_text"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/image_view_current_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_current_location"/>

    <TextView
        android:id="@+id/text_view_your_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_photo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_location"/>

    <ImageView
        android:id="@+id/iv_capture_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_min="40dp"
        app:layout_constraintHeight_max="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_add_circle_24"
        android:background="@drawable/bg_capture_photo"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_your_photo"/>

    <Button
        android:id="@+id/btn_check_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_in"
        android:background="@drawable/bg_btn_primary"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_capture_photo"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>