<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.history.HistoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:elevation="0dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tb_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/history"
                    app:titleTextColor="@color/colorPrimary"
                    android:elevation="0dp"/>

            </com.google.android.material.appbar.AppBarLayout>

            <com.applandeo.materialcalendarview.CalendarView
                android:id="@+id/calendar_view_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:eventsEnabled="true"
                app:headerColor="@color/colorPrimaryDark"
                app:pagesColor="@color/colorPrimaryDark"
                app:abbreviationsBarColor="@color/colorPrimaryDark"
                app:headerLabelColor="@color/white"
                app:abbreviationsLabelsColor="@color/white"
                app:todayLabelColor="@color/colorPrimary"
                app:previousButtonSrc="@drawable/ic_baseline_keyboard_arrow_left_24"
                app:forwardButtonSrc="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintTop_toBottomOf="@id/appbar_history"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#EFEFEF"
                app:layout_constraintTop_toBottomOf="@id/calendar_view_history">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <LinearLayout
                        android:id="@+id/container_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:background="@drawable/bg_btn_primary"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/tv_current_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="03"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@android:color/white"/>

                        <TextView
                            android:id="@+id/tv_current_month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="September"
                            android:textStyle="bold"
                            android:textColor="@android:color/white"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_view_check_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintBottom_toTopOf="@id/tv_time_check_in"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/container_date"
                        app:layout_constraintEnd_toStartOf="@id/text_view_check_out"/>

                    <TextView
                        android:id="@+id/text_view_check_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_out"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintBottom_toTopOf="@id/tv_time_check_out"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/text_view_check_in"/>

                    <TextView
                        android:id="@+id/tv_time_check_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10:12"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/text_view_check_in"
                        app:layout_constraintStart_toStartOf="@id/text_view_check_in"
                        app:layout_constraintEnd_toEndOf="@id/text_view_check_in"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/tv_time_check_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10:12"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/text_view_check_out"
                        app:layout_constraintStart_toStartOf="@id/text_view_check_out"
                        app:layout_constraintEnd_toEndOf="@id/text_view_check_out"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pbHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>